UI for user report

--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -1,4 +1,44 @@
 <%- include("../partials/header"); -%>
-<h1>report</h1>
+
+<div class="">
+  <div class="flex justify-between gap-4">
+    <div
+      class="
+        px-4
+        py-6
+        rounded-md
+        bg-pink-200
+        border-l-4 border-blue-600
+        shadow-lg
+      "
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, optio?
+    </div>
+    <div
+      class="
+        px-4
+        py-6
+        rounded-md
+        bg-yellow-200
+        border-l-4 border-blue-600
+        shadow-lg
+      "
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, optio?
+    </div>
+    <div
+      class="
+        px-4
+        py-6
+        rounded-md
+        bg-green-200
+        border-l-4 border-blue-600
+        shadow-lg
+      "
+    >
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, optio?
+    </div>
+  </div>
+</div>
 
 <%- include("../partials/footer"); -%>
