--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -13,16 +13,9 @@
     >
   </div>
   <div class="time" id="elapsedTime">00:00:00</div>
+  <button class="btn-start" id="start-btn">start</button>
 
-<% if(start==0){ %>
-  <form action="/attendance-start" method="POST">
-    <button type="submit" class="btn-start" id="start-btn">start</button>
-  </form>
-<% }else{ %> 
-  <form action="/attendance-end" method="POST">
-    <button type="submit" class="btn-end" id="end-btn">End</button>
-  </form>
-  <% } %>  
+      <button style="display: none;" class="btn-end" id="end-btn">End</button>
 </div>
 
 <!-- ProJect Modal Start -->
@@ -43,36 +36,39 @@
 <div class="history">
   <div class="date-bar">
     <div class="date">Today</div>
-    <div class="total-work-time"><%=todayTotal[0].todayTotal || "00:00:00" %></div>
+    <div id="total-work-time"><%= todayTotal || "00:00:00" %></div>
   </div>
-  <%today.map(t=>{%>
-  <div class="details">
-    <div class="title">hello</div>
-    <div class="project-name">hello world</div>
-    <div class="start-time"><%= t.start  %> </div>
-    <end class="time"><%= t.end  %> </end>
-    <div class="total-work-time"><%= t.total  %> </div>
+  <div id="today-details">
+    <%today.map(t=>{%>
+      <div class="details">
+      <div class="title">hello</div>
+      <div class="project-name">hello world</div>
+      <div class="start-time"><%= t.start  %> </div>
+      <end class="time"><%= t.end  %> </end>
+      <div class="total-work-time"><%= t.total  %> </div>
+    </div>
+      <% })%>
   </div>
-  <% })%>
 </div>
 <div class="history">
   <div class="date-bar">
     <div class="date">This Week</div>
-    <div class="total-work-time"><%=weekTotal[0].weekTotal || "00:00:00" %></div>
+    <div class="total-work-time"><%= weekTotal || "00:00:00" %></div>
   </div>
   <%weekHistory.map(h=>{%>
   <div class="details">
     <div class="title"><%= h.date  %>  </div>
     <div class="project-name">hello world</div>
     <div class="start-time"><%=h.start %></div>
-    <end class="time"><%=h.end %></end>
+    <end class="end-time"><%=h.end %></end>
     <div class="work-time"><%=h.total %></div>
   </div>
   <% })%>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
     let startTimeShow = "<%=start %>"
 </script>
 <script src="/js/timeTracking.js"></script>
+
 <%- include("../partials/footer.ejs"); -%>
