add two navs li in nav.ejs

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,6 +9,14 @@
         <span class="title">Dashboard</span>
       </a>
     </li>
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="/reports">
+        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
+        <span class="title">Reports</span>
+      </a>
+    </li>
     <% } else { %>
     <li class="list">
       <b></b>
@@ -16,6 +24,14 @@
       <a href="/dashboard">
         <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
         <span class="title">Dashboard</span>
+      </a>
+    </li>
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="/reports">
+        <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
+        <span class="title">Reports</span>
       </a>
     </li>
     <li class="list">
