--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,7 +12,7 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/reports">
+      <a href="/report">
         <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
         <span class="title">Reports</span>
       </a>
@@ -29,7 +29,7 @@
     <li class="list">
       <b></b>
       <b></b>
-      <a href="/reports">
+      <a href="/report">
         <span class="icon"><ion-icon name="grid-outline"></ion-icon></span>
         <span class="title">Reports</span>
       </a>
