update time view

--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -14,7 +14,7 @@
       "
     >
       <h3>Avarage Work Start Time</h3>
-      <h4><b><%= avgStartTime %> </b> </h4>
+      <h4><b><%= avgStartTime || '00:00' %> </b> </h4>
     </div>
     <div
       class="
@@ -27,7 +27,7 @@
       "
     >
     <h3>Avarage Work End Time</h3>
-    <h4><b><%= avgEndTime %> </b> </h4>
+    <h4><b><%= avgEndTime || '00:00' %> </b> </h4>
     </div>
     <div
       class="
