--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -51,13 +51,13 @@
   <div>
     <input
       type="date"
-      class="p-2 bg-blue-100 rounded-md"
+      class="p-2 bg-blue-200 rounded-md shadow-md"
       onchange="selectStartDate(event)"
     />
     <small class="p-2 text-md font-bold">To</small>
     <input
       type="date"
-      class="p-2 bg-blue-100 rounded-md"
+      class="p-2 bg-blue-200 rounded-md shadow-md"
       onchange="selectEndDate(event)"
     />
   </div>
@@ -74,7 +74,7 @@
             <th class="p-3">DATE</th>
             <th class="p-3 text-left">IN</th>
             <th class="p-3 text-left">OUT</th>
-            <th class="p-3 text-left">Working Hours</th>
+            <th class="p-3 text-left">Fixed Time</th>
             <th class="p-3 text-left">Working Time</th>
             <th class="p-3 text-left">Less / Extra</th>
           </tr>
