report card color update

--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -14,7 +14,7 @@
       "
     >
       <h3>Avarage Work Start Time</h3>
-      <h4><b><%= avgStartTime || '00:00' %> </b> </h4>
+      <h4><b><%= avgStartTime || '00:00' %> </b></h4>
     </div>
     <div
       class="
@@ -22,12 +22,12 @@
         py-6
         rounded-md
         bg-yellow-200
-        border-l-4 border-blue-600
+        border-l-4 border-green-600
         shadow-lg
       "
     >
-    <h3>Avarage Work End Time</h3>
-    <h4><b><%= avgEndTime || '00:00' %> </b> </h4>
+      <h3>Avarage Work End Time</h3>
+      <h4><b><%= avgEndTime || '00:00' %> </b></h4>
     </div>
     <div
       class="
@@ -35,26 +35,26 @@
         py-6
         rounded-md
         bg-green-200
-        border-l-4 border-blue-600
+        border-l-4 border-yellow-400
         shadow-lg
       "
     >
-    <h3>This Week Total Work Hours</h3>
-    <h4><b><%= weekHr %> </b> </h4>
+      <h3>This Week Total Work Hours</h3>
+      <h4><b><%= weekHr %> </b></h4>
     </div>
     <div
-    class="
-      px-4
-      py-6
-      rounded-md
-      bg-yellow-400
-      border-l-4 border-blue-600
-      shadow-lg
-    "
-  >
-  <h3>This Month Total Work Hours</h3>
-  <h4><b><%= monthHr %> </b> </h4>
-  </div>
+      class="
+        px-4
+        py-6
+        rounded-md
+        bg-yellow-400
+        border-l-4 border-pink-600
+        shadow-lg
+      "
+    >
+      <h3>This Month Total Work Hours</h3>
+      <h4><b><%= monthHr %> </b></h4>
+    </div>
   </div>
 </div>
 
