--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -46,6 +46,23 @@
     <li class="list">
       <b></b>
       <b></b>
+      <a href="/add-holiday">
+        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
+        <span class="title">Add holidays</span>
+      </a>
+    </li>
+    <li class="list">
+      <b></b>
+      <b></b>
+      <a href="/add-leaveday">
+        <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
+        <span class="title">Add Leave days</span>
+      </a>
+    </li>
+
+    <li class="list">
+      <b></b>
+      <b></b>
       <a href="/all-users">
         <span class="icon"><ion-icon name="code-outline"></ion-icon></span>
         <span class="title">Users</span>
