update date range input
when select start date then show report  start to current date

--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -166,20 +166,60 @@
   // get start date
   let startDate;
 
-  const selectStartDate = (event) => {
+  const selectStartDate = async(event) => {
     //console.log(event.target.value);
     let getDate = event.target.value;
     console.log("start date", getDate);
 
     startDate = getDate;
+
+    // get current date 
+function getCurrentDate(){
+    let today = new Date();
+    let dd = String(today.getDate()).padStart(2, '0');
+    let mm = String(today.getMonth() + 1).padStart(2, '0'); 
+    let yyyy = today.getFullYear();
+    today = `${yyyy}-${mm}-${dd}`;
+
+    return today;
+
+}
+
+
+      let data = await fetch(
+      `${baseUrl}/report/between/two-date?startDate=${startDate}&endDate=${getCurrentDate()}`
+    );
+    let jsonData = await data.json();
+    jsonData.map((el) => console.log(el.create_date));
+    console.log(jsonData);
+    anUserReportTable.innerHTML = jsonData
+      .map(
+        (el) =>
+          `
+          <tr class="${el.day ===  "Friday" ? "bg-red-200" : 
+          el.type === "holiday" ? "bg-yellow-200" : el.type === "leave" ?"bg-red-400" : "bg-blue-200"} lg:text-black">
+          <td class="p-3">${ el.day}</td>
+          <td class="p-3 font-medium capitalize">${el.date}</td>
+            <td class="p-3">${el.start}</td>
+            <td class="p-3">${el.end}</td>
+            <td class="p-3 font-medium">${ el.day === 'Friday' ? 'Off day' : el.type }</td>
+            <td class="p-3">${el.day === 'Friday' ? '0' : '6'}</td>
+            <td class="p-3">${el.working_time}</td>
+            <td class="p-3">${el.day === 'Friday' ?  el.working_time : el.time_count}</td>
+          </tr>
+          `
+      )
+      .join("");
+
     //
   };
 
   //end date
   const selectEndDate = async (event) => {
-    console.log(startDate);
 
+    
     const endDate = event.target.value;
+   
     console.log("end date", endDate);
     let data = await fetch(
       `${baseUrl}/report/between/two-date?startDate=${startDate}&endDate=${endDate}`
@@ -195,10 +235,9 @@
           el.type === "holiday" ? "bg-yellow-200" : el.type === "leave" ?"bg-red-400" : "bg-blue-200"} lg:text-black">
           <td class="p-3">${ el.day}</td>
           <td class="p-3 font-medium capitalize">${el.date}</td>
-            <td class="p-3">${ el.start}</td>
-            <td class="p-3">${ el.end}</td>
+            <td class="p-3">${el.start}</td>
+            <td class="p-3">${el.end}</td>
             <td class="p-3 font-medium">${ el.day === 'Friday' ? 'Off day' : el.type }</td>
-
             <td class="p-3">${el.day === 'Friday' ? '0' : '6'}</td>
             <td class="p-3">${el.working_time}</td>
             <td class="p-3">${el.day === 'Friday' ?  el.working_time : el.time_count}</td>
